*SVN*

* CHANGED: validates_presence_of now uses Errors#add_on_blank, which will make "  " fail the validation where it didn't before #1309

* Added Errors#add_on_blank which works like Errors#add_on_empty, but uses Object#blank? instead

* Added the :if option to all validations that can either use a block or a method pointer to determine whether the validation should be run or not. #1324 [Duane Johnson/jhosteny]. Examples:

  Conditional validations such as the following are made possible:
    validates_numericality_of :income, :if => :employed?

  Conditional validations can also solve the salted login generator problem:
    validates_confirmation_of :password, :if => :new_password?
  
  Using blocks:
    validates_presence_of :username, :if => Proc.new { |user| user.signup_step > 1 }

* Fixed use of construct_finder_sql when using :join #1288 [dwlt@dwlt.net]

* Fixed that :delete_sql in has_and_belongs_to_many associations couldn't access record properties #1299 [Rick Olson]

* Fixed that clone would break when an aggregate had the same name as one of its attributes #1307 [bitsweat]

* Changed that destroying an object will only freeze the attributes hash, which keeps the object from having attributes changed (as that wouldn't make sense), but allows for the querying of associations after it has been destroyed.

* Changed the callbacks such that observers are notified before the in-object callbacks are triggered. Without this change, it wasn't possible to act on the whole object in something like a before_destroy observer without having the objects own callbacks (like deleting associations) called first.

* Added option for passing an array to the find_all version of the dynamic finders and have it evaluated as an IN fragment. Example:

    # SELECT * FROM topics WHERE title IN ('First', 'Second')
    Topic.find_all_by_title(["First", "Second"])

* Added compatibility with camelCase column names for dynamic finders #533 [Dee.Zsombor]
