@@ -1,5 +1,9 @@
 *SVN*
 
+* Added DoubleRenderError exception that'll be raised if render* is called twice #518 [Nicholas Seckar]
+
+* Fixed exceptions occuring after render has been called #1096 [Nicholas Seckar]
+
 * CHANGED: validates_presence_of now uses Errors#add_on_blank, which will make "  " fail the validation where it didn't before #1309
 
 * Added Errors#add_on_blank which works like Errors#add_on_empty, but uses Object#blank? instead
